# haskell-agentic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  haskell-agentic.cabal
.github/workflows/: ci.yml
app/: Agentic.hs  Combinators.hs  Examples.hs  Jokes.hs  LLM.hs  Main.hs  Progress.hs  Prompts.hs  PureAgentic.hs  PureMockup.hs  Simple.hs
app/LLM/: Client.hs
app/LLM/Anthropic/: Client.hs  Types.hs
app/LLM/OpenAI/: Client.hs
app/Protocol/: Class.hs
app/Protocol/DhallSchema/: Marshal.hs  Prompts.hs
app/Protocol/JSONSchema/: Marshal.hs
docs/plans/: 2026-03-13-v1-refactor.md
examples/: DinoProject.hs  Main.hs
specs/: REFACTOR.md  REFACTOR_PLAN.md
src/: Agentic.hs  Combinators.hs  Example2.hs  Examples.hs  Main.hs  Progress.hs  Simple.hs
src/Agentic/: Core.hs  Effects.hs  Error.hs  Prompt.hs  Retry.hs  Schema.hs  Tools.hs
src/Agentic/Provider/: Anthropic.hs
src/Agentic/Schema/: Dhall.hs  Json.hs
src/LLM/: Client.hs  Provider.hs
src/LLM/Anthropic/: Client.hs
src/LLM/OpenAI/: Client.hs
src/Protocol/: Class.hs
src/Protocol/DhallSchema/: Marshal.hs  Prompts.hs
src/Protocol/JSONSchema/: Marshal.hs  Prompts.hs
test/: Main.hs  Spec.hs
test/Agentic/: RetrySpec.hs
test/LLM/: ProviderSpec.hs
test/Protocol/DhallSchema/: MarshalSpec.hs
test/Protocol/JSONSchema/: MarshalSpec.hs
test/Test/: MockLLM.hs  RetrySpec.hs
