cabal-version: 3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.
name: haskell-agentic
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version: 0.1.0.0
synopsis:
    Type-safe composable LLM agents using Kleisli arrows and Dhall/JSON Schema

description:
    haskell-agentic provides a framework for building type-safe, composable
    LLM agents in Haskell. Agents are modelled as Kleisli arrows in an RWS
    monad, enabling composition with standard Arrow combinators. Inputs and
    outputs are constrained by Dhall or JSON schemas, giving strong type
    guarantees on LLM responses without brittle string parsing.
    .
    Key features:
    .
    * Type-safe extraction: @extract \@MyType@ returns a parsed Haskell value
    * Composable: agents are arrows, compose with @>>>@ and custom combinators
    * Multi-schema: Dhall (primary) and JSON Schema (via autodocodec)
    * Concurrent: @(\<\<.\>\>)@ fanout combinator runs sub-agents concurrently
    * Configurable retry: @withRetry@ for LLM parse failures

homepage:
    https://github.com/tomwells/haskell-agentic

bug-reports:
    https://github.com/tomwells/haskell-agentic/issues

license: BSD-2-Clause
license-file: LICENSE
author: Tom Wells
maintainer: tom@synthesis.co.za
category:
    AI, LLM, Agents
build-type: Simple
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  hs-source-dirs: src
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    MultilineStrings
    NoFieldSelectors
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TemplateHaskell
    TypeApplications
    TypeFamilies
  exposed-modules:
    Agentic
    Agentic.Error
    Agentic.Retry
    Combinators
    LLM.Provider
    Protocol.Class
    Protocol.DhallSchema.Marshal
    Protocol.JSONSchema.Marshal
    Simple
  other-modules:
    LLM.Anthropic.Client
    Progress
    LLM.Anthropic.Types
    LLM.Client
    LLM.OpenAI.Client
    Protocol.DhallSchema.Prompts
    Protocol.JSONSchema.Prompts
  build-depends:
    aeson,
    aeson-pretty,
    ansi-terminal,
    async,
    autodocodec,
    autodocodec-schema,
    base >=4.7 && <5,
    bytestring,
    containers,
    dhall >=1.41 && <1.43,
    either,
    http-conduit,
    monad-loops,
    mtl,
    stm,
    text,
    time,
    unliftio,
    vector,

test-suite haskell-agentic-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications
  other-modules:
    Agentic.RetrySpec
    LLM.ProviderSpec
    Protocol.DhallSchema.MarshalSpec
    Protocol.JSONSchema.MarshalSpec
  build-depends:
    base >=4.7 && <5,
    haskell-agentic,
    dhall >=1.41 && <1.43,
    autodocodec,
    tasty,
    tasty-hunit,
    text,

executable haskell-agentic-examples
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TemplateHaskell
    TypeApplications
  other-modules:
    Example2
    Examples
    PureMockup
  build-depends:
    aeson,
    autodocodec,
    autodocodec-schema,
    base >=4.7 && <5,
    bytestring,
    containers,
    dhall >=1.41 && <1.43,
    free,
    haskell-agentic,
    monad-loops,
    mtl,
    text,
    unliftio,
    vector,
