cabal-version: 3.0

name: haskell-agentic
version: 0.1.0.0
synopsis: Type-safe agentic programming via algebraic effects
description:
  Compose LLM-backed agents using discrete algebraic effects (via effectful-core).
  Dhall is the default schema format for structured output — derivable via Generic,
  supports sum types and let bindings. JSON Schema is available as an alternative.
  Provider interpreters are swappable: changing one line in main switches providers.
license: BSD-2-Clause
license-file: LICENSE
author: Tom Wells
maintainer: tom@synthesis.co.za
category: AI, Effects
homepage: https://github.com/synthesis-labs/haskell-agentic
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Agentic
    Agentic.Core
    Agentic.Effects
    Agentic.Schema
    Agentic.Schema.Dhall
    Agentic.Schema.Json
    Agentic.Tools
    Agentic.Prompt
    Agentic.Retry
    Agentic.Error
    Agentic.Provider.Anthropic

  other-modules:
    LLM.Anthropic.Client
    LLM.Anthropic.Types
    LLM.Client

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications
    TypeFamilies
    TemplateHaskell

  build-depends:
    aeson,
    aeson-pretty,
    autodocodec,
    autodocodec-schema,
    base >=4.7 && <5,
    bytestring,
    containers,
    dhall >=1.41 && <1.43,
    either,
    effectful-core,
    effectful-th,
    http-client,
    http-conduit,
    text,
    time,
    unliftio,
    vector,

  hs-source-dirs: src
  default-language: GHC2024

test-suite haskell-agentic-tests
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Test.MockLLM
    Test.RetrySpec
  hs-source-dirs: test
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
    TypeApplications
    ScopedTypeVariables
  build-depends:
    base >=4.7 && <5,
    haskell-agentic,
    effectful-core,
    dhall >=1.41 && <1.43,
    hspec,
    text,

executable haskell-agentic-examples
  import: warnings
  main-is: Main.hs
  other-modules:
    DinoProject
  hs-source-dirs: examples
  default-language: GHC2024
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings
    TypeApplications
  build-depends:
    base >=4.7 && <5,
    dhall >=1.41 && <1.43,
    effectful-core,
    haskell-agentic,
    text,
